Fixing invalid viewport on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  height: (var(--vh, 1vh) * 100);
 }
 
 ::-webkit-scrollbar {
